# tameshi-openclaw

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix
migrations/001_initial/: down.sql  up.sql
src/: config.rs  error.rs  lib.rs  main.rs  mcps.rs
src/api/: routes.rs  types.rs
src/core/: entities.rs  types.rs
src/entities/: gate_decision.rs  mod.rs  scan_record.rs
src/hooks/: artifact_gate.rs  config_attestation.rs  connector_attestation.rs  mod.rs  model_switch.rs  skill_activation.rs  skill_creation.rs
src/scanner/: alert.rs  daemon.rs  drift.rs  mod.rs
src/skill/: attestation.rs  gate.rs  mod.rs  store_client.rs
